Network/Ingress/nginx.org/rewrite-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.org/rewrites: "serviceName=service1 rewrite=/;serviceName=service2 rewrite=/"
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: service1
          servicePort: 3000
      - path: /nginx
        backend:
          serviceName: service2
          servicePort: 80
